# keel

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-PENDING.md  README.md  RELEASE_NOTES-0.2.0.md  RELEASE_NOTES-0.3.0.md  SECURITY.md  deny.toml  llms-full.txt  llms.txt  rust-toolchain.toml
conformance/: README.md  (+2 more)
crates/keel/: Cargo.toml  README.md
crates/keel-cli/: Cargo.toml  build.rs  pyproject.toml
crates/keel-cli/contract/: defaults.toml  error-codes.json
crates/keel-cli/src/: agents_cli.rs  cmd_match.rs  diff.rs  doctor.rs  effective.rs  evidence.rs  exec.rs  explain.rs  flows.rs  flows_add.rs  flows_suggest.rs  force.rs  fsck.rs  init.rs  lib.rs  main.rs  mcp.rs  record.rs  render.rs  replay.rs  resume.rs  run.rs  sim.rs  status.rs  tail.rs
crates/keel-cli/src/scan/: js.rs  mod.rs  python.rs
crates/keel-cli/src/scan/js/: ast.rs
crates/keel-cli/templates/: agents-snippet.md
crates/keel-cli/tests/: cli.rs  exec.rs  flows_force.rs  mcp.rs  tail.rs
crates/keel-cli/tests/fixtures/agents_cli_project/: agents-cli-manifest.yaml
crates/keel-cli/tests/fixtures/events/: 0000000f00d-0001.ndjson  0000000f00e-0002.ndjson
crates/keel-cli/tests/fixtures/node_fetch/: app.mjs
crates/keel-cli/tests/fixtures/node_openai/: app.mjs
crates/keel-cli/tests/fixtures/py_agent_stack/: app.py
crates/keel-cli/tests/fixtures/py_flow_candidates/: pipeline.py
crates/keel-cli/tests/fixtures/py_httpx_openai/: app.py
crates/keel-cli/tests/golden/: doctor_agent_stack.json  doctor_agents_cli_placement.json  doctor_effective.json  doctor_effective.txt  doctor_effective_level0.json  doctor_fix.json  doctor_node.json  effective_policy_merge.json  explain_e005.json  explain_e014.json  flows_add_append.json  flows_add_create.json  flows_suggest_node.json  flows_suggest_py.json  init_agents.md  init_diff.json  init_llm_observed.toml  init_node.toml  init_py.toml  mcp_session.jsonl  replay_completed.json  replay_dead.json  replay_interrupted.json  replay_step3.json  status.json  tail_story.ndjson  tail_story.txt
crates/keel-conformance/: Cargo.toml
crates/keel-conformance/src/: lib.rs
crates/keel-core/: Cargo.toml
crates/keel-core-api/: Cargo.toml  build.rs
crates/keel-core-api/contract/: core_api.rs
crates/keel-core-api/src/: lib.rs  policy.rs
crates/keel-core-stub/: Cargo.toml
crates/keel-core-stub/src/: lib.rs  policy.rs  runtime.rs
crates/keel-core-stub/tests/: conformance.rs
crates/keel-core/benches/: overhead.rs  support.rs
crates/keel-core/src/: engine.rs  events.rs  flow.rs  journal_backend.rs  lib.rs  metrics.rs  otel.rs
crates/keel-core/tests/: conformance.rs  engine.rs  events.rs  flows.rs  flows_conformance.rs  flows_conformance_postgres.rs  idempotency.rs  journal.rs  overhead_guard.rs  telemetry.rs
crates/keel-core/tests/support/: mod.rs
crates/keel-ffi/: Cargo.toml
crates/keel-ffi/src/: lib.rs
crates/keel-ffi/tests/: abi_conformance.rs  header_drift.rs
crates/keel-journal/: Cargo.toml  build.rs
crates/keel-journal/contract/: journal.sql
crates/keel-journal/src/: admin.rs  clock.rs  convert.rs  discovery.rs  error.rs  journal.rs  lib.rs  postgres_journal.rs  postgres_schema.sql  sqlite.rs  types.rs
crates/keel-journal/tests/: fixtures.rs  postgres_journal.rs
crates/keel-journal/tests/support/: mod.rs
crates/keel-macros/: Cargo.toml
crates/keel-macros/src/: lib.rs
crates/keel-node/: Cargo.toml  build.rs
crates/keel-node/src/: lib.rs
crates/keel-py/: Cargo.toml  pyproject.toml
crates/keel-py/src/: lib.rs
crates/keel-py/tests/: test_async_bridge.py  test_journal_read.py
crates/keel/src/: error.rs  lib.rs  middleware.rs  policy.rs
crates/keel/tests/: middleware_integration.rs  trybuild.rs  wrap_integration.rs
crates/keel/tests/fixtures/middleware/: keel.toml
crates/keel/tests/fixtures/wrap/: keel.toml
crates/keel/tests/ui/: fail_missing_target.rs  fail_missing_target.stderr  fail_non_result_return.rs  fail_non_result_return.stderr  fail_sync_fn.rs  fail_sync_fn.stderr  pass_basic.rs
python/keel/: README.md  keelrun_activate.pth  pyproject.toml
python/keel-core-stub/: pyproject.toml
python/keel-core-stub/keel_core_stub/: __init__.py
python/keel/scripts/: measure_resolve_target_ffi.py
python/keel/src/keel/: __init__.py  __main__.py  _auto.py  _backend.py  _defaults.py  _discovery.py  _flow.py  _policy.py  _record.py  _run.py  _runtime.py  _sim.py  _targets.py  _wrap.py  bootstrap.py  testing.py
python/keel/src/keel/adapters/: __init__.py  _http.py  _llm_policy.py  aiohttp_pack.py  boto3_pack.py  httpx_pack.py  psycopg_pack.py  requests_pack.py  subprocess_pack.py  urllib3_pack.py  urllib_pack.py
python/keel/src/keel/packs/: __init__.py  _framework.py  _provider.py  adk_pack.py  anthropic_pack.py  crewai_pack.py  google_genai_pack.py  langgraph_pack.py  llm.py  mcp_pack.py  openai_agents_pack.py  openai_pack.py  pydantic_ai_pack.py  tool.py
python/keel/src/keel_core_stub/: __init__.py
python/keel/tests/: __init__.py  faultserver.py  test_adapters_aiohttp.py  test_adapters_boto3.py  test_adapters_disable.py  test_adapters_http.py  test_adapters_httpx.py  test_adapters_psycopg.py  test_adapters_requests.py  test_adapters_subprocess.py  test_adapters_urllib.py  test_adapters_urllib3.py  test_adk_runner_flows_native.py  test_adk_session_service_native.py  test_auto.py  test_demos.py  test_discovery.py  test_farm_adk.py  test_farm_adk_composition.py  test_farm_adk_composition_native.py  test_farm_adk_session_service.py  test_farm_crewai.py  test_farm_langgraph.py  test_farm_mcp.py  test_farm_openai_agents.py  test_farm_pydantic_ai.py  test_farm_subprocess.py  test_farm_urllib.py  test_flaky_demo.py  test_flows.py  test_hook.py  test_journal_policy.py  test_layer_resolution.py  test_llm_budget_fallback.py  test_llm_policy.py  test_native_adapters.py  test_packs_adk.py  test_packs_crewai.py  test_packs_langgraph.py  test_packs_llm.py  (+19 more)
python/keel/tests/fixtures/: echo_argv.py  enrich_app.py  fake_adk.py  flaky_httpx_app.py  flow_target.py  hello_app.py  mcp_stdio_server.py  noop_app.py  sample_targets.py
(+262 files in other folders)
