[workspace]
resolver = "3"
members = ["crates/keel-core-api", "crates/keel-core-stub"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
repository = "https://github.com/MisterTK/Keel"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_path_to_error = "0.1.20"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unused_qualifications = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# pedantic opt-outs, deliberate:
doc_markdown = "allow"          # prose-heavy contract docs; noise outweighs value
missing_errors_doc = "allow"    # error semantics live in the contract docs
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
