[workspace]
resolver = "3"
members = [
    "crates/keel",
    "crates/keel-cli",
    "crates/keel-conformance",
    "crates/keel-core",
    "crates/keel-core-api",
    "crates/keel-core-stub",
    "crates/keel-ffi",
    "crates/keel-journal",
    "crates/keel-macros",
    "crates/keel-node",
    "crates/keel-py",
]

[workspace.package]
# The single version source. Everything else derives from or is checked
# against it: crates inherit it, the keel-core wheel reads it via maturin
# (`dynamic = ["version"]`), and scripts/check-versions.py asserts the
# remaining manifests (pyproject/package.json/front-end constants) agree.
# Bump with scripts/bump-version.sh, never by hand.
version = "0.1.1"
edition = "2024"
rust-version = "1.97"
repository = "https://github.com/MisterTK/keel"
license = "Apache-2.0"
readme = "README.md"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_path_to_error = "0.1.20"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unused_qualifications = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# pedantic opt-outs, deliberate:
doc_markdown = "allow"          # prose-heavy contract docs; noise outweighs value
missing_errors_doc = "allow"    # error semantics live in the contract docs
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
