[package]
name = "keel-core-api"
description = "Keel core API contract types (contracts-v1). Single source of truth: contracts/core_api.rs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
# Publishable: the compiled source is the vendored crate-local copy in
# contract/, kept byte-identical to the frozen contracts/core_api.rs by
# build.rs on every workspace build. Publishing itself is a release-workflow
# step; registry naming is docs/naming-decision.md.

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_path_to_error = { workspace = true }

[lints]
workspace = true
