[package]
name = "keel-core-stub"
description = "In-memory fake keel-core: records calls, applies trivial resilience semantics on a virtual clock. Unblocks front-end teams until the real core lands."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
keel-core-api = { path = "../keel-core-api" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }

[lints]
workspace = true
