[package]
name = "keel-ffi"
description = "The frozen C ABI facade over keel-core (contracts/core-ffi.h): MessagePack envelopes in, deterministic JSON reports out. The one crate in the workspace that is allowed `unsafe`."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[lib]
# cdylib/staticlib for the C ABI consumers (PyO3/napi bindings, the CLI); rlib
# so the CLI and this crate's own tests can link and call the symbols directly.
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
keel-core = { path = "../keel-core" }
keel-core-api = { path = "../keel-core-api" }
rmp-serde = "1.3"
serde = { workspace = true }
serde_json = { workspace = true }
# Current-thread runtime + time driver only: the engine needs the timer wheel
# (backoff/throttle/timeout), never IO, so `enable_time()` alone drives it.
tokio = { version = "1.47", features = ["rt", "time"] }

[features]
# Harness-only virtual clock. Turns on tokio's paused-time test driver and, with
# it, `keel_test_new_paused` / `keel_test_advance_clock` (NOT in core-ffi.h —
# feature-gated out of every release build). See the crate docs.
test-clock = ["tokio/test-util"]

[dev-dependencies]
keel-conformance = { path = "../keel-conformance" }

# This crate cannot inherit `[workspace.lints]`: the workspace FORBIDS unsafe_code
# (an absolute level that no inner attribute can relax), and implementing a C ABI
# is impossible without `unsafe`. So we restate the workspace lint posture here
# verbatim, changing only unsafe_code — every other standard stays in force, and
# CI still runs clippy pedantic `-D warnings` over this crate. Each unsafe block
# is narrow with a `// SAFETY:` note; every extern entry point is wrapped in
# `catch_unwind` so no panic can unwind across the ABI.
[lints.rust]
unsafe_code = "allow"
missing_debug_implementations = "warn"
unused_qualifications = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
